# hyfuzz-client-ubuntu

./: .editorconfig  .env.example  .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  SECURITY.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS  FUNDING.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  code-quality.yml  codeql-analysis.yml  deploy.yml  docker-build.yml  lint.yml  release.yml  security-scan.yml  tests.yml
config/: analysis_config.yaml  client_config.yaml  execution_config.yaml  instrumentation_config.yaml  monitoring_config.yaml  notification_config.yaml  protocol_config.yaml  sandbox_config.yaml
config/example_configs/: config_aggressive.yaml  config_coap.yaml  config_dev.yaml  config_distributed.yaml  config_modbus.yaml  config_mqtt.yaml  config_safe.yaml  config_test.yaml
data/payloads/: http_payloads.json  mqtt_payloads.json
data/results/: statistics.json
data/targets/: http_targets.json  mqtt_targets.json  target_fingerprints.json  target_profiles.json
data/test_servers/: coap_server.py  http_server.py  mock_server.py  modbus_server.py  mqtt_server.py  vulnerable_server.py
docker/: healthcheck.sh  wait-for-server.sh
docker/nginx/: nginx.conf
docker/postgres/: init.sql  postgresql.conf
docker/prometheus/: prometheus.yml
docs/: API.md  ARCHITECTURE.md  CRASH_ANALYSIS.md  DEPLOYMENT.md  FAQ.md  FUZZING.md  INSTRUMENTATION.md  MONITORING.md  PROTOCOLS.md  README.md  REPORTING_GUIDE.md  ROADMAP.md  SANDBOX_GUIDE.md  SETUP.md  TARGET_MANAGEMENT.md  TROUBLESHOOTING.md  USAGE.md
notebooks/: 08_target_profiling.ipynb
scripts/: analyze_crashes.py  backup_results.py  cleanup.sh  configure_sandbox.sh  generate_report.py  health_check.sh  monitor_client.py  run_campaign.py  run_coap_test.py  run_fuzzing.py  run_http_test.py  run_modbus_test.py  run_mqtt_test.py  setup_env.sh  setup_instrumentation.sh  setup_servers.py  start_client.py  test_connection.py  validate_structure.py
scripts/deployment/: deploy_client.sh  deploy_distributed.sh  rollback.sh
scripts/maintenance/: cleanup_old_results.sh  optimize_database.sh  rotate_logs.sh  update_client.sh
scripts/targets/: fingerprint_service.py  profile_target.py  scan_targets.py
src/: __init__.py  __main__.py  __version__.py
src/analysis/: analysis_models.py  asan_parser.py  backtrace_parser.py  core_dump_analyzer.py  crash_analyzer.py  deduplicator.py  exploitability_checker.py  valgrind_parser.py
src/config/: .env.template  analysis_config.yaml  config_loader.py  default_config.yaml  execution_config.yaml  instrumentation_config.yaml  logging_config.yaml  monitoring_config.yaml  notification_config.yaml  protocol_config.yaml  sandbox_config.yaml  settings.py
src/execution/: __init__.py  crash_detector.py  execution_state.py  orchestrator.py  payload_executor.py  resource_monitor.py  result_collector.py  runtime_monitor.py  sandbox_manager.py  signal_handler.py  task_queue.py  timeout_manager.py  utils.py
src/fuzzing/: __init__.py  corpus_manager.py  dictionary_manager.py  fuzzing_strategies.py  grammar_fuzzer.py  mutation_engine.py  seed_manager.py
src/instrumentation/: __init__.py  coverage_tracker.py  instrumentation_models.py  instrumentor.py  ltrace_parser.py  memory_tracker.py  ptrace_handler.py  signal_interceptor.py  strace_parser.py  syscall_monitor.py
src/integration/: afl_integration.py  honggfuzz_integration.py  libfuzzer_integration.py  peach_integration.py  radamsa_integration.py
src/judge/: __init__.py  adaptive_tuner.py  coverage_analyzer.py  crash_analyzer.py  feedback_generator.py  judge.py  learning_engine.py  metrics_calculator.py  signal_interpreter.py  vulnerability_scorer.py
src/mcp_client/: client.py  connection_manager.py  heartbeat_manager.py  http_transport.py  message_parser.py  protocol_selector.py  retry_handler.py  stdio_transport.py  utils.py  websocket_transport.py
src/models/: common_models.py  crash_models.py  execution_models.py  feedback_models.py  metric_models.py  payload_models.py  protocol_models.py  result_models.py
src/monitoring/: health_checker.py  metrics_collector.py  monitoring_models.py  performance_monitor.py  resource_monitor.py  system_monitor.py
src/notifications/: console_notifier.py  email_notifier.py  notification_models.py  notifier.py  slack_notifier.py  webhook_notifier.py
src/protocols/: __init__.py  base_handler.py  coap_handler.py  coap_vulnerabilities.py  fuzz_engine.py  grpc_handler.py  http_handler.py  http_vulnerabilities.py  modbus_handler.py  modbus_vulnerabilities.py  mqtt_handler.py  mqtt_vulnerabilities.py  packet_parser.py  payload_generator.py  protocol_factory.py  protocol_validator.py  utils.py
src/reporting/: coverage_report.py  crash_report.py  html_reporter.py  json_reporter.py  markdown_reporter.py  report_generator.py  statistics_reporter.py
src/scheduling/: campaign_manager.py  load_balancer.py  scheduler.py  scheduling_models.py  task_prioritizer.py
src/storage/: cache.py  crash_storage.py  database.py  file_storage.py  repository.py  result_archiver.py  sqlite_manager.py
src/targets/: __init__.py  service_detector.py  target_manager.py  target_models.py  target_profiler.py  target_scanner.py  version_fingerprint.py  vulnerability_mapper.py
src/utils/: __init__.py  async_utils.py  decorators.py  exceptions.py  helpers.py  logger.py  metrics.py  network_utils.py  process_utils.py  system_utils.py  time_utils.py  validators.py
tests/: conftest.py
tests/e2e/: test_complete_campaign.py  test_crash_to_report.py  test_distributed_execution.py  test_real_targets.py
tests/fixtures/: fixtures_loader.py  mock_crashes.py  mock_data.py  mock_protocols.py  mock_server.py  mock_targets.py  sample_payloads.py
tests/integration/: test_client_server.py  (+10 more)
(+33 files in other folders)
