[metadata]
name = hyfuzz-client
version = attr: src.__version__
description = HyFuzz client for Ubuntu systems
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
include_package_data = True
install_requires =
python_requires = >=3.10

[options.packages.find]
where = src

[tool:pytest]
addopts = -ra
python_files = test_*.py

[flake8]
max-line-length = 120
extend-ignore = E203, W503
